--- a/app/index.html
+++ b/app/index.html
@@ -1,9 +1,16 @@
+<!-- 
+Landing page
+This page contains three links to raw data page, pivot table builder page, and 
+observation page. 
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="utf-8">
     <title>Project Phase 3</title>
+    <!-- Styling -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
