--- a/app/pivotTable.html
+++ b/app/pivotTable.html
@@ -4,21 +4,22 @@
 <head>
     <meta charset="utf-8">
     <title>Pivot Table</title>
+    <!-- Styling -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
+    <!-- button: back to the upper hierarchy -->
     <a class="btn btn-info btn-back" onclick="location.href='/pivotTableBuilder';">
         <i class="fa fa-reply" aria-hidden="true"></i>Back
     </a>
     <h3>Pivot Table</h3>
+    <!-- Requirements passed from pivot table builder page -->
     <div class="row">
         <p class="ptbstr">{{ptb_str}}</p>
     </div>
-
     <!-- Pivot table -->
     <div class="table-container">
         <table class="table table-bordered table-condensed table-responsive">
@@ -41,7 +42,6 @@
                     {% endfor %}
                 </tr>
             </thead>
-
             <tbody>
                 {% for i in range(0,row_val_len) %}
                 <tr>
@@ -54,7 +54,6 @@
                         {{ aggr_a_val[i][k] }}
                     </td>
                     {% endfor %}
-
                 </tr>
                 {% endfor %}
             </tbody>
@@ -62,6 +61,7 @@
     </div>
 </body>
 
+<!-- JS libraries -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js" type="text/javascript"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
