--- a/app/ptb.html
+++ b/app/ptb.html
@@ -1,23 +1,32 @@
+<!-- 
+Pivot table builder page
+This page allows user to build a pivot table by inputting row, column, 
+aggregation attribute, aggregation method, and an optional filter (the attribute 
+to filter on, filter condition, and filter value). It will lead to pivot table 
+page after clicking "Create Pivot Table" button. 
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="utf-8">
     <title>Pivot Table Builder</title>
+    <!-- Styling -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body id="bg-img2">
+    <!-- button: back to the upper hierarchy -->
     <a class="btn btn-info btn-back" onclick="location.href='/';">
         <i class="fa fa-reply" aria-hidden="true"></i>Back
     </a>
 
-    <!-- Pivot table form -->
+    <!-- Pivot table builder form -->
     <form class="ptb-container" action="pivotTable" onsubmit="return checkInput()" method="post">
         <h3>Pivot Table Builder</h3>
-
         <div class="row">
             <!-- Row label -->
             <div class="form-group col-md-6">
@@ -40,13 +49,11 @@
         </div>
 
         <div class="row">
-            <!-- Aggregation -->
+            <!-- Aggregation method and aggregation attribute -->
             <div class="form-group col-md-6">
                 <label for="sel1">Aggregation</label>
                 <select class="form-control selector" name="aggregation_method" id="aggregation_method">
                     <option value="count">count of</option>
-                    <!-- <option value="sum">sum of</option> -->
-                    <!-- <option value="average">average of</option> -->
                     <option value="max">maximum of</option>
                     <option value="min">minimun of</option>
                 </select>
@@ -79,15 +86,20 @@
             </div>
         </div>
 
+        <!-- Error message (when the form does not pass the form validation) -->
         <div class="row errmsg" id="errmsg"></div>
+
+        <!-- Submit button -->
         <div class="row">
             <input class="btn btn-primary btn-submit" type="submit" value="Create Pivot Table" />
         </div>
     </form>
 </body>
 
+<!-- JS libraries -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js" type="text/javascript"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<!-- Form validation -->
 <script type="text/javascript">
     function checkInput() {
         // Row, column, or aggregation attribute cannot be the same
@@ -133,7 +145,7 @@
                 document.getElementById("filter_attr").value!="personalinjury" &&
                 document.getElementById("filter_attr").value!="commerciallicense" &&
                 document.getElementById("filter_attr").value!="commercialvehicle") {
-                document.getElementById("errmsg").innerHTML = '<div class="alert alert-danger"><i class="fa fa-exclamation-circle" aria-hidden="true"></i><strong>Filter error: </strong>This column does not contain value "Yes" or "No".</div>';
+                document.getElementById("errmsg").innerHTML = '<div class="alert alert-danger"><i class="fa fa-exclamation-circle" aria-hidden="true"></i><strong>Filter error: </strong>The chosen column does not contain value "Yes" or "No".</div>';
                 return false;
             }
         }
