--- a/app/rawData.html
+++ b/app/rawData.html
@@ -1,9 +1,16 @@
+<!-- 
+Raw data page
+This page shows the dataset used for the project. It provides sorting, searching 
+and pagination on the raw dataset. 
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="utf-8">
     <title>Raw Data</title>
+    <!-- Styling -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.15/css/dataTables.bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -13,6 +20,7 @@
 <body>
     <!-- Loader -->
     <div class="loader"></div>
+    <!-- button: back to the upper hierarchy -->
     <a class="btn btn-info btn-back" onclick="location.href='/';">
         <i class="fa fa-reply" aria-hidden="true"></i>Back
     </a>
@@ -44,22 +52,24 @@
     </div>
 </body>
 
+<!-- JS Libraries -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js" type="text/javascript"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" type="text/javascript"></script>
+<!-- dataTables library that provides sorting, searching and pagination -->
 <script src="https://cdn.datatables.net/1.10.15/js/jquery.dataTables.min.js" type="text/javascript"></script>
 <script src="https://cdn.datatables.net/1.10.15/js/dataTables.bootstrap.min.js" type="text/javascript"></script>
-<!-- Loader -->
 <script type="text/javascript">
+    // Loader
     $(window).load(function() {
         $(".loader").fadeOut("slow");
     });
-
+    // dataTable styling
     $(document).ready(function(){
         $('#datatable').DataTable({
             "scrollX": true
         });
     });
-
+    // Column styling
     document.getElementById("description").style.width = '230px';
     document.getElementById("vehicletype").style.width = '100px';
 </script>
