moved styling logic to server

--- a/app/rawData.html
+++ b/app/rawData.html
@@ -27,7 +27,7 @@ and pagination on the raw dataset.
     <h3>Traffic Violations in New York</h3>
     <!-- Table -->
     <div class="table-container">
-        <table class="table table-bordered table-condensed table-responsive" id="datatable">
+        <table class="table table-bordered table-condensed table-responsive raw-table" id="datatable">
             <thead>
                 <tr>
                     <th>#</th>
