--- a/app/observation.html
+++ b/app/observation.html
@@ -36,8 +36,8 @@ visualisation.
             large range of attributes, mostly catagorical. Data processing such 
             as error fixing, dataset simplifying is adopted for analysis 
             purpose. Five hypothesis are analyzed by visualization methods.<br><br>
-            To view the raw data, click <a href="/rawData">here</a>. <br>
-            Data source can be accessed 
+            To view the raw data used for this website, click <a href="/rawData">here</a>. <br>
+            Original data source can be accessed 
             <a href="https://data.montgomerycountymd.gov/Public-Safety/Traffic-Violations/4mse-ku6q">
             here. </a>
         </p>
@@ -53,10 +53,24 @@ visualisation.
                         <b>Hypothesis</b>: Traffic violations are more likely to 
                         take place when temperature is relatively higher (June, 
                         July, Aug). <br><br>
-                        <b>Note</b>: We omitted the 2017 data from the dataset, because 2017 is still not complete, if we do add it in, there will be violations in the second half of 2017 missing, which can be misleading when plotting the histogram.<br><br>
-                        <b>Insight</b>: Traffic violations distribute relatively evenly throughout the year. It's fair to conclude that temperature doesn't affect the number of 
-                        traffic violations that much. Our original assumption was when temperature 
-                        is higher, people might be more impatient and lean to violating traffic. Acutually during winter, vehicles tend to have a longer stopping distance due to the very low temperature, which makes them harder to drive. That could contribute to the traffic violations. And natrual phenomenon like snowing hinders driving as well, so hot days and cold days both have their disadvantages. From above, saying temperature doesn't afftect traffic violations makes sense.
+                        <b>Note</b>: We omitted the 2017 data from the dataset, 
+                        because 2017 is still not complete, if we do add it in, 
+                        there will be violations in the second half of 2017 
+                        missing, which can be misleading when plotting the 
+                        histogram.<br><br>
+                        <b>Insight</b>: Traffic violations distribute relatively 
+                        evenly throughout the year. It's fair to conclude that 
+                        temperature doesn't affect the number of traffic 
+                        violations that much. Our original assumption was when 
+                        temperature is higher, people might be more impatient 
+                        and lean to violating traffic. Acutually during winter, 
+                        vehicles tend to have a longer stopping distance due to 
+                        the very low temperature, which makes them harder to 
+                        drive. That could contribute to the traffic violations. 
+                        And natrual phenomenon like snowing hinders driving as 
+                        well, so hot days and cold days both have their 
+                        disadvantages. From above, saying temperature doesn't 
+                        affect traffic violations makes sense.
                     </p>
                 </div>
                 <div class="col-md-6">
@@ -129,7 +143,12 @@ visualisation.
                         <b>Insight</b>: As time goes by, people seem to violate 
                         traffic rules more and more, it could be that many 
                         people start to drive, there are more new drivers who 
-                        are not familiar with the road. At 2015, there is a population peak in New York, and according to the population pyramid in Hypothesis 2, there are a large number of population aged between 20-15, which can be a huge potenial number of new drivers every year. So there is a plausible explanation of this trend.
+                        are not familiar with the road. At 2015, there is a 
+                        population peak in New York, and according to the 
+                        population pyramid in Hypothesis 3, there are a large 
+                        number of population aged between 20-15, which can be a 
+                        huge potential number of new drivers every year. So 
+                        there is a plausible explanation of this trend.
                 </div>
                 <div class="col-md-6">
                     <div id="hypo2" style="width:100%; height:400px;"></div>
