--- a/app/observation.html
+++ b/app/observation.html
@@ -207,12 +207,12 @@ visualisation.
                     <p class="obs-text">
                         <b>Hypothesis</b>: 'Women are bad drivers' stereotype is 
                         actually not true.<br><br>
-                        <b>Clearification</b>: To clearify, in New York, the percentages of male and female are pretty close to each other, being 47.8% and 52.2% repectively. and in each age group, they are relatively balanced, which makes the drving-age-population roughly equal, according to the population pyrimad. So there is no 'less female population' or 'less female drivers' to interfere the analysis.<br><br>
+                        <b>Clarification</b>: To clarify, in New York, the percentages of male and female are pretty close to each other, being 47.8% and 52.2% respectively. And in each age group, they are relatively balanced, which makes the driving-age-population roughly equal, according to the population pyramid. So there is no 'less female population' or 'less female drivers' to interfere the analysis.<br><br>
                         <b>Insight</b>: Some could argue that there is no chart 
-                        showing whether female have a less percenatge of causing 
+                        showing whether female have a less percentge of causing 
                         fatality than male, but at least from the violation 
                         percentage, it's pretty clear that females, at least in 
-                        New York, are very concious of the traffic rules. In New York, more than 70% of traffic violations are caused by males, we can saftely conclude that, leaving the drving skills aside, females tend to violate traffic rules less than males.
+                        New York, are very conscious of the traffic rules. In New York, more than 70% of traffic violations are caused by males, we can safely conclude that, leaving the driving skills aside, females tend to violate traffic rules less than males.
                     </p>
                     <div id="hypo3" style="width:100%; height:400px;"></div>
                     <script type="text/javascript">
@@ -286,8 +286,8 @@ visualisation.
                     likely to cause personal injuries. <br><br>
                         <b>Insight</b>: Bad lighting conditions at night could 
                         affect drivers' sight, which leads to possible 
-                        violations. We can compare 2 peak hours: 6-7 and 17-18, 
-                        the second peak hour has a large number of violations 
+                        violations. We can compare 2 peak hours on the road: 6-7 and 17-18, during which the roads are most congested.
+                        The second peak hour has a large number of violations 
                         but hardly any injuries, while the first peak hour, with 
                         not so many violations, however a large number of 
                         personal injuries. The only variable between those two 
@@ -486,6 +486,15 @@ visualisation.
                 </div>
             </div>
         </div>
+    </div>
+    <hr>
+
+    <div class="row obs-container">
+        <h4>Conclusion</h4>
+        <p class="obs-text">
+            There are 5 hypothesis assumed, including relation between traffic violations and temperature, lighting condition, gender and seat belts, as well as the trend of violations number among the recent years.
+            Through deep analysis, we drew the following conclusions : there is no clear relation between violations and temperature, traffic violations tend to grows as the number of drivers increase over time, females violate traffic rules less than males, worse lighting conditions deteriorates the violations and wearing selt belt has a positive corelation with violating other traffic rules.
+        </p>
     </div>
 
 </body>
